Closed Bug 619998 Opened 14 years ago Closed 13 years ago

Kill Document.strictErrorChecking

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla6

People

(Reporter: Ms2ger, Assigned: Ms2ger)

Details

(Keywords: dev-doc-complete, Whiteboard: [wdc])

Attachments

(1 file)

Document.strictErrorChecking has never been implemented, and has been removed from Web DOM Core, we should remove it from the IDL as well. Patch coming up.
Attached patch Patch v1Splinter Review
Attachment #518067 - Flags: review?(jonas)
Depends on: post2.0
Whiteboard: [wdc] → [wdc][needs landing]
Needs IID changes for things inheriting from nsIDOMDocument.
Whiteboard: [wdc][needs landing] → [wdc][needs landing][not-ready-for-cedar]
No longer depends on: post2.0
Whiteboard: [wdc][needs landing][not-ready-for-cedar] → [wdc][need gk2.2 ship]
http://hg.mozilla.org/mozilla-central/rev/5dbd304ad5b5
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [wdc][need gk2.2 ship] → [wdc]
Target Milestone: --- → mozilla6
Keywords: dev-doc-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: