Bug 619998 - Remove support for Document.strictErrorChecking; r=sicking